--- a/ESG_Rating_Pipeline.ipynb
+++ b/ESG_Rating_Pipeline.ipynb
@@ -5,14 +5,11 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "d7LOFUX9e1MR",
+        "HVVtxpUakhW6",
         "c6Orc86IkvzK",
         "d-4P-4ISNnIK",
         "Z3O6JoP6dd4A",
-        "kIeeCCaJYOSS",
-        "WePE7s2Sb3XH",
-        "dagE904EzDgm",
-        "AlPgT_1IDg-6",
+        "eorNX4HulU7X",
         "jXwO4HN1uRAy"
       ],
       "gpuType": "T4",
